services/kubernetes/manifests/samba/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: samba
  namespace: samba
spec:
  serviceName: samba-lb
  replicas: 1
  selector:
    matchLabels:
      app: samba
  template:
    metadata:
      labels:
        app: samba
    spec:
      nodeSelector:
        node-role.kubernetes.io/stor: ""
      containers:
        - name: samba
          image: ghcr.io/servercontainers/samba:latest
          ports:
            - containerPort: 445
              name: smb
          volumeMounts:
            - name: samba-storage
              mountPath: /shares/timemachine
      volumes:
        - name: samba-storage
          hostPath:
            path: /mnt/timemachine
            type: DirectoryOrCreate
