services/kubernetes/manifests/samba/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba-lb
  namespace: samba
spec:
  type: LoadBalancer
  selector:
    app: samba
  ports:
    - protocol: TCP
      port: 445
      targetPort: 445
